--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@ PDF_Chat.ipynb
 .ipynb_checkpoints
 *.pkl
 .DS_Store
-files/images/*
-files/ocr/*
-files/pd/*
-files/pk/*
 .vscode/
 __pycache__/
+data/
