--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+secrets.toml
 # C extensions
 *.so
 
@@ -161,3 +161,4 @@ cython_debug/
 #.idea/
 
 data/
+updatedapp.py
