--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.8.5
-openai
+openai==0.28.1
+langchain==0.0.330
 pdfkit
 pdfminer
 pdf2image
@@ -30,7 +31,6 @@ jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
-langchain==0.0.133
 langsmith==0.0.40
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
