--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
-langsmith==0.0.40
+langsmith >=0.0.52
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
